--- a/css/style.css
+++ b/css/style.css
@@ -16,16 +16,20 @@
 
 }
 
+#sellalldiv{
+padding-top:75px;
+margin:0 auto;
 
-#gold{
-  position:absolute;
-  margin-top:80px;
-  margin-left:20px;
 }
-#level{
-  position:absolute;
-  margin-top:100px;
-  margin-left:20px;
+#sellall{
+margin:0 auto;
+width:300px;
+}
+
+#textstats{
+position:absolute;
+margin-top:80px;
+margin-left:30px;
 }
 
 #upgradeinfo{
@@ -40,7 +44,14 @@
 #buttonwrapper{
   margin:0 auto;
   width:666px;
+  padding:5px;
+  
+}
 
+#summonbuttons{
+    margin:0 auto;
+  width:656px;
+  margin-top:35px;
 }
 #bosslevel{
 position:absolute;
